style/st1_pet_shop.css
.container {
    display: flex;
}
.col1 {
    padding-left: 38px;
    padding-right: 60px;
    padding-top: 100px;
    background: #f4f7ff;
    border-right: 1px solid rgba(192, 192, 192, 0.534);
    display: flex;
    padding-bottom: 100px;
    /* align-items: center; */
}

.col2 {
    flex-grow: 1;
}
/* Shop Banner */
.shop_banner {
    display: flex;
    justify-content: center;
    align-items: center;
    background: linear-gradient(90deg, #FFF4F4 0%, #FFF5F5 68.84%, #FFF8F8 102.47%);
    box-shadow: 1px 8px 10px rgba(206, 206, 206, 0.25);
    box-sizing: border-box;
    padding: 60px 100px;
}
.banner_gif img {
    height: 22.4rem;
    padding-bottom: 20px;
    margin-left: 20px;
}
.banner_message {
    max-width: 481px;
}
.banner_message h3{
    color: rgb(255, 89, 89);
    font-size: 3.8rem;
    line-height: 1.2em;
    font-weight: 700;
    margin-bottom: 0;
}
.banner_message p {
    padding: 10px 0;
    margin-top: 3px;
    line-height: 1.5em;
}
.banner_btn {
    padding: 8px 20px;
    font-size: 1.6rem;
    display: table;
    margin-top: 30px;
    color: rgb(243, 243, 243);
    font-weight: 600;
    background: linear-gradient(180deg, #0500FF 0%, #403DFF 0.01%, #4A7DFF 100%);
    box-shadow: 0px 0px 2px #4350FF;
    transition: 0.1s;
}
.banner_btn:hover {  
    color: rgb(255, 255, 255);
    box-shadow: -2px 3px 2px rgba(41, 41, 41, 0.425);
    /* box-shadow: -5px 0px 10px #4350FF; */
}
.banner_btn:active {  
    color: rgb(255, 255, 255);
    box-shadow: -1px 2px 2px rgba(43, 43, 43, 0.589);
        /* box-shadow: -5px 0px 10px #4350FF; */
}
/* Shop */
.shop_container {
    padding: 0 70px;
}
.shop_heading h3 {
    font-size: 3rem;
}
.showcase {
    margin-bottom: 60px;
    display: flex;
    flex-wrap: wrap;
}
.item {
    display: flex;
    flex-direction: column;
    width: 28%;
    min-width: 18px;
    padding: 15px 0;
    text-align: center;
    border: 1px solid rgb(216, 216, 216);
    box-sizing: border-box;
    box-shadow: 0px 4px 7px rgba(190, 190, 190, 0.25);
    margin-right: 5%;
    margin-bottom: 35px;
    /* width: 25%; */
    /* flex-shrink: 0; */
    /* flex-wrap: wrap; */
    /* flex-grow: 1; */
}
.item_des {
    padding: 0 5px;
   

}
.itm_img {
    /* width: 18rem; */
    /* width: 100%; */
    height: 14rem;
    object-fit:contain;
    align-self: center;
}
.quantity {
    box-sizing: border-box;
    display: flex;
    background: #c3e1e280;
    padding: 5px 8%;
    margin-top: 12px;
    justify-content: space-between;
    /* align-items: center; */
}

.counter, .cart_counter {
    float: left;
    /* Firefox alignment fix */
    display: flex; 
    align-items: center;
    justify-content: center;
    /* Fix End */
    box-sizing: border-box;
    height: 18px;
    width: 18px;
    border: 0.1px solid #6e6e6e;
    background: #e3e3e3;
    color: #000000;
    font-size: 16px;
    margin: 0;
}
.counter:hover, .cart_counter:hover {
    background: #c9c9c9;
}
.counter:active, .cart_counter:active {
    background: #b0b0b0;
}
.cart_counter {
    height: 22px;
    width: 22px;
    font-size: 1.8rem;
}
.qnt_input, .cart_qnt_input {
    font-size: 12px; 
    float: left;
    border: 0.1px solid #333;
    border-left: 0px; 
    border-right: 0px; 
    padding: 0; 
    margin: 0; 
    text-align: center; 
    width: 18px !important; 
    height: 18px !important; 
    box-sizing: border-box;
}
.cart_qnt_input {
    font-size: 1.4rem;
    height: 22px !important;
    width: 22px !important;
}
.add {
    box-sizing: border-box;
    padding: 6px 35px;
    border: 0px solid #c7c7c7;
    background: #ff0000;
    color: #ffffff;
    font-size: 1.6rem;
    font-weight: 600;
    margin-top: 10px;
    transition: 0.2s;
}
.add:hover {
    background: #e20202;
}
.add:active {
    background: #af0000;
}
.shop_heading {
    margin: 40px 0;
    
}
#category {
    font-size: 1.3rem;
}
.shop_form_txt {
    box-sizing: border-box;
    width: 100%;
    border: 1px solid silver;
    padding: 7px;
}
textarea {
    resize: vertical;
    width: 100%;
    min-height: 100px;
    max-height: 150px;
    /* min-width: 130px; */
}
form {
    width: 23rem;
    margin: 30px 0;
}
.form_btn {
    background: #002bff;
    margin-right: 2px;
    margin-top: 30px;
    border: 2px solid #002bff;
    color: white;
    padding: 5px 10px;
    font-weight: 600;
    font-size: 1.4rem;
    transition: 0.2s;
}
.rest {
    color: #002bff;
    background: transparent;
}
.form_btn:hover {
    background: #0324c9;
    border-color: #0324c9;
    color: white;
}
.form_btn:active {
    background: #051d94;
    color: rgb(255, 255, 255);
}
.validation {
    display: none;
    color: red;
    font-size: 12px;
    font-weight: 600;
    /* display: block; */
    margin-top: 5px;
}
/* .cart_title {
    margin-top: 20px;
} */
.cart_title::after {
    background-image: url('/img/icon/cart.png');
    background-size: contain;
    display: inline-block; 
    height: 26px;
    width: 26px;
    margin-left: 10px;
    vertical-align:-30%;
    content:"";
}
.cart_btn {
    /* border-radius: 50%; */
    width: 50px;
    height: 50px;
    background: rgba(255, 255, 255, 0.507);
    border: 1px solid rgb(174, 198, 235);
    border-right: 0;
    position: fixed;
    top: 75%;
    right: 0;
}
.cart_link, .cart_btn {
    cursor: pointer;
}
.cart_btn:hover {
    background: rgb(174, 235, 192);
}
.cart_btn:active {
    background: rgba(117, 224, 149, 0.808);
}
.cart_icon {
    height: 28px;
    width: 28px;
}
/* MODAL BOXES */
.cart_modal, .bill_modal, .empty_cart_modal, .form_invalid_modal {
    visibility: hidden ;
    position: fixed;
    top: 0;
    z-index: 1;
    left: 0;
    display: none;
    flex-direction: column;
    /* justify-content: center;
    align-items: center; */
    width: 100%;
    height: 100%;
    background: rgba(94, 94, 94, 0.582);
    
}
/* CART */
.cart_container {
    background: #fff;
    padding: 35px 40PX;
    /* padding-bottom: 0; */
    width: 55%;
    margin:auto;
    overflow: auto;
}
/* ... */

